[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.23"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0"
typeshare = "1.0.0"

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
features = ["diesel_postgres_pool"]
