[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = "0.4.1"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel_migrations = "2.0"
jsonwebtoken = "8.2.0"
password-hash = "0.4.2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "59ee2e0", features = ["json", "secrets", "uuid"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0"
typeshare = "1.0.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
rev = "59ee2e0"
features = ["diesel_postgres_pool"]

[dev-dependencies]
criterion = "0.4"
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }

[[bench]]
name = "surveys"
harness = false

[[bench]]
name = "responses"
harness = false

[profile.bench]
debug = true
